fixes name on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,7 +30,7 @@ body {
 
 @media screen and (max-width: 648px) {
   .name {
-    font-size: 1.9em;
+    font-size: 1.7em;
   }
 }
 
